BE/API/CONFIG: Ora i gruppi si specificano nel config.json ed il backend li legge dinamicamente
